Fjerner modell her og bruker fpsoknad-felles sin istedenfor. fpsoknad-felles bump til 0.2.1.